# performance-testing

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  results.txt  run.py
config/: __init__.py
test/: conftest.py  test_data.py  test_device.py  test_sensor.py  test_user.py  utils.py
test/helper_jsons/: admin_credentials.json  device_put.json  new_data.json  new_device.json  new_sensor.json  new_user.json  new_user_credentials.json  sensor_put.json  user_credentials.json
