[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pytest = "^5.4.3"
ansicolors = "^1.1.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
yapf = "^0.30.0"
python-dotenv = "^0.14.0"
matplotlib = "^3.2.2"
autopep8 = "^1.5.3"
pytest-html = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
